--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-	"name": "fcc-api-projects-boilerplate",
-	"version": "0.0.1",
+	"name": "fcc-project-1",
+	"version": "1.0.0",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
+	"engines":{
+		"node": "12.x"
+	},
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
+		"ejs": "^2.5.6",
+		"express": "^4.15.2",
 		"cors": "^2.8.0"
+	},
+	"devDependencies":{
+		"got": "^11.3.0",
+		"tape": "^4.7.0"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://githost.com/camper/repo.git"
-	},
+		"url": "https://github.com/amerbawji/fcc-project-1"
+	}, 
 	"keywords": [
 		"node",
 		"hyperdev",
 		"express",
-		"freecodecamp"
+		"freecodecamp",
+		"heroku"
 	],
 	"license": "MIT"
 }
