--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
 	"version": "1.0.0",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
-	"engines":{
+	"engines": {
 		"node": "12.x"
 	},
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.1",
+		"cors": "^2.8.0",
 		"ejs": "^2.5.6",
 		"express": "^4.15.2",
-		"cors": "^2.8.0"
+		"mongodb": "^4.2.2",
+		"mongoose": "^6.1.4",
+		"shortid": "^2.2.16"
 	},
-	"devDependencies":{
+	"devDependencies": {
 		"got": "^11.3.0",
 		"tape": "^4.7.0"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/amerbawji/fcc-project-1"
-	}, 
+	},
 	"keywords": [
 		"node",
 		"hyperdev",
